force-app/main/default/objects/OneCRM__ChabadAppSettings__c/OneCRM__ChabadAppSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allows specific actions such as turning off triggers. Protected so that can only be accessed in specific situations.</description>
    <label>Chabad App Settings</label>
</CustomObject>