force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__CreditCard_TESTMode__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__CreditCard_TESTMode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to enforce this user to use the TEST settings for credit card payments.</inlineHelpText>
    <label>CreditCard_TESTMode</label>
    <type>Checkbox</type>
</CustomField>