force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__DISABLE_AutoCreateHousehold_Person__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__DISABLE_AutoCreateHousehold_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, when the Primary Household field is empty on a PersonAccount, the system will NOT create a household and place the Person into it. This WILL result in people not being associated with households.</inlineHelpText>
    <label>DISABLE_AutoCreateHousehold_Person</label>
    <type>Checkbox</type>
</CustomField>