force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__DISABLE_AutoDeleteEmptyHouseholds__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__DISABLE_AutoDeleteEmptyHouseholds__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the system will not auto-delete empty households daily.</inlineHelpText>
    <label>DISABLE_AutoDeleteEmptyHouseholds</label>
    <type>Checkbox</type>
</CustomField>