force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__HasCommunicator__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__HasCommunicator__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Communicator</label>
    <type>Checkbox</type>
</CustomField>