force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__Next_Candlelighting_Start__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Candlelighting_Start__c</fullName>
    <description>The next date/time for candle lighting either for Shabbos or Yom Tov</description>
    <inlineHelpText>Populated by API calls</inlineHelpText>
    <label>Next Candlelighting Start</label>
    <type>DateTime</type>
</CustomField>