force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__Next_Candlelighting_Type__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Candlelighting_Type__c</fullName>
    <description>The name of the next holiday or shabbos</description>
    <inlineHelpText>Populated by API call</inlineHelpText>
    <label>Next Candlelighting Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>