force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__Next_Havdalah_Time__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Havdalah_Time__c</fullName>
    <description>Next date and time for havdalah - date/time the next Shabbos or Yom Tov ends</description>
    <inlineHelpText>Populated by API call</inlineHelpText>
    <label>Next Havdalah Time</label>
    <type>DateTime</type>
</CustomField>