force-app/main/default/objects/OneCRM__ChabadAppSettings__c/fields/OneCRM__Pages_and_Assignments_Loaded__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Pages_and_Assignments_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked when pages and page assignments have been loaded.</inlineHelpText>
    <label>Pages and Assignments Loaded</label>
    <type>Checkbox</type>
</CustomField>